# dynamo-wasm-fdw

./: Cargo.toml
src/: lib.rs
supabase/: config.toml
