[package]
name = "dynamo_wasm_fdw"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
lto = true

[dependencies]
wit-bindgen-rt = "0.26.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hmac = "0.12.1"
sha2 = "0.10.8"
base16 = "0.2.1"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }

tokio = { version = "1.32.0", features = ["rt", "macros"] }

[package.metadata.component]
package = "davisuga:dynamo-wasm-fdw"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"supabase:wrappers" = { path = "./supabase-wrappers-wit" }
